Updated SSL configuration for Apache REST client.

--- a/scripts/nsi-dds.conf
+++ b/scripts/nsi-dds.conf
@@ -17,9 +17,12 @@ stop on stopping postgresql-9.3
 respawn limit 10 5
 
 script
+  exec 2>>/var/log/nsi-dds/upstart.log
+  set -x
+
 [ -e /home/safnari/nsi-dds/dds.jar ]
 exec su -l -s /bin/bash -c 'exec "$0" "$@"' $USER -- /usr/bin/java \
-        -Xmx1536m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true  \
+        -Xmx1536m -Djava.net.preferIPv4Stack=true  \
         -Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true \
         -Djavax.net.ssl.trustStore=$TRUSTSTORE \
         -Djavax.net.ssl.trustStorePassword=$PASSWORD \
