--- a/scripts/nsi-dds.conf
+++ b/scripts/nsi-dds.conf
@@ -22,17 +22,14 @@ script
 
 [ -e /home/safnari/nsi-dds/dds.jar ]
 exec su -l -s /bin/bash -c 'exec "$0" "$@"' $USER -- /usr/bin/java \
-        -Xmx1536m -Djava.net.preferIPv4Stack=true  \
+        -Xmx1024m -Djava.net.preferIPv4Stack=true  \
         -Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true \
+        -Djava.util.logging.config.file="$HOME/config/logging.properties" \
         -Djavax.net.ssl.trustStore=$TRUSTSTORE \
         -Djavax.net.ssl.trustStorePassword=$PASSWORD \
         -Djavax.net.ssl.keyStore=$KEYSTORE \
         -Djavax.net.ssl.keyStorePassword=$PASSWORD \
-        -Dapp.home="$HOME" \
-        -Dbasedir="/" \
-        -Djava.util.logging.config.file="$HOME/config/logging.properties" \
+        -Dbasedir="$HOME" \
         -jar "$HOME/dds.jar" \
-        -c "$HOME/config/" \
-        -ddsConfigFile "$HOME/config/dds.xml"
 end script
 
