Added version API to REST interface.
Can now access build information for DDS server load using
/dds/management/version.

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ nsi-pce.iml
 .idea
 *.iml
 config/cache/*.xml
+config/repository/*.xml
+/src/test/resources/config/cache/
 /src/test/resources/config/repository/
 *.swp
