Added additional logging to track notification subscriptions.

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ config/cache/*.xml
 config/repository/*.xml
 /src/test/resources/config/cache/
 /src/test/resources/config/repository/
+/src/main/resources/git.properties
 *.swp
