--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jersey.version>2.17</jersey.version>
+        <jersey.version>2.22</jersey.version>
         <spring.version>4.0.6.RELEASE</spring.version>
         <slf4j.version>1.7.5</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
@@ -35,6 +35,12 @@
     </pluginRepositories>
 
     <dependencies>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-xjc</artifactId>
+            <version>2.2.11</version>
+        </dependency>
+
         <!-- Jersey for JAX-RS and HTTP container runtime. -->
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
