--- a/pom.xml
+++ b/pom.xml
@@ -531,64 +531,22 @@
                 </executions>
             </plugin>
 
+            <!-- puts all code & libraries in one jar -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <archive>
-                     <manifest>
-                        <addClasspath>true</addClasspath>
-                        <mainClass>net.es.nsi.dds.server.Main</mainClass>
-                     </manifest>
-                   </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                   <finalName>dds</finalName>
-                </configuration>
+                <groupId>com.jolira</groupId>
+                <artifactId>onejar-maven-plugin</artifactId>
+                <version>1.4.4</version>
                 <executions>
                     <execution>
-                        <id>assemble-all</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                   <archive>
-                     <manifest>
-                        <addClasspath>true</addClasspath>
-                        <mainClass>net.es.nsi.dds.server.Main</mainClass>
-                     </manifest>
-                   </archive>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
+                        <id>DDS</id>
                         <configuration>
-                            <tasks>
-                                <echo>Moving dds-jar-with-dependencies.jar to dds.jar</echo>
-                                <move file="${project.build.directory}/dds-jar-with-dependencies.jar"
-                                 tofile="${project.build.directory}/dds.jar" />
-                            </tasks>
+                            <mainClass>net.es.nsi.dds.server.Main</mainClass>
+                            <classifier>onejar</classifier>
+                            <filename>dds.jar</filename>
                         </configuration>
+                        <goals>
+                            <goal>one-jar</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
