--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jersey.version>2.22.2</jersey.version>
+        <jersey.version>2.25.1</jersey.version>
         <spring.version>4.0.6.RELEASE</spring.version>
         <slf4j.version>1.7.5</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
@@ -448,7 +448,7 @@
                     <properties>
                         <property>
                             <name>javax.xml.accessExternalSchema</name>
-                            <value>file,http</value>
+                            <value>file,http,all</value>
                         </property>
                     </properties>
                 </configuration>
