--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
     <maven.javadoc.skip>true</maven.javadoc.skip>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <jersey.version>3.0.1</jersey.version> <!-- 2.33 -->
   </properties>
 
   <dependencies>
@@ -24,38 +23,38 @@
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
       <artifactId>jersey-container-grizzly2-http</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-moxy</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.connectors</groupId>
       <artifactId>jersey-apache-connector</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.inject</groupId>
       <artifactId>jersey-hk2</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.hk2</groupId>
       <artifactId>hk2-metadata-generator</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-common</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
     </dependency>
 
 
@@ -105,12 +104,6 @@
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
       <version>1.3.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
-      <version>1</version>
     </dependency>
 
     <!-- For spring beans to drive configuration loading. -->
@@ -256,7 +249,7 @@
     <dependency>
       <groupId>org.glassfish.jersey.test-framework.providers</groupId>
       <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
-      <version>${jersey.version}</version>
+      <version>[3.0.1,)</version>
       <scope>test</scope>
     </dependency>
 
