--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,14 @@
     <!-- Jersey for JAX-RS and HTTP container runtime. -->
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
-      <artifactId>jersey-container-grizzly2-http</artifactId>
+      <artifactId>jersey-container-grizzly2-servlet</artifactId>
       <version>[3.0.1,)</version>
-      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-server</artifactId>
+      <version>[3.0.1,)</version>
     </dependency>
 
     <dependency>
@@ -43,12 +48,24 @@
       <groupId>org.glassfish.jersey.inject</groupId>
       <artifactId>jersey-hk2</artifactId>
       <version>[3.0.1,)</version>
+            <exclusions>
+        <exclusion>
+          <groupId>org.glassfish.hk2.external</groupId>
+          <artifactId>aopalliance-repackaged</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.hk2</groupId>
       <artifactId>hk2-metadata-generator</artifactId>
       <version>[3.0.1,)</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.glassfish.hk2.external</groupId>
+          <artifactId>aopalliance-repackaged</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -56,7 +73,6 @@
       <artifactId>jersey-common</artifactId>
       <version>[3.0.1,)</version>
     </dependency>
-
 
     <!-- Needed for our use of JAXB API bindings. -->
     <dependency>
@@ -70,7 +86,21 @@
       <groupId>jakarta.ws.rs</groupId>
       <artifactId>jakarta.ws.rs-api</artifactId>
       <version>3.0.0</version>
+    </dependency>
+
+    <!-- For content encoding types. -->
+    <dependency>
+      <groupId>jakarta.mail</groupId>
+      <artifactId>jakarta.mail-api</artifactId>
+      <version>2.0.0</version>
       <scope>provided</scope>
+    </dependency>
+
+    <!-- For priority annotations. -->
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>2.0.0</version>
     </dependency>
 
     <!-- JAXB Runtime -->
@@ -79,44 +109,18 @@
       <artifactId>jaxb-runtime</artifactId>
       <version>3.0.0</version>
     </dependency>
-<!--
-<dependency>
-    <groupId>javax.xml.bind</groupId>
-    <artifactId>jaxb-api</artifactId>
-    <version>2.3.1</version>
-</dependency>
--->
-    <!-- For transfer encoding support. -->
-    <dependency>
-      <groupId>javax.mail</groupId>
-      <artifactId>javax.mail-api</artifactId>
-      <version>1.6.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sun.mail</groupId>
-      <artifactId>javax.mail</artifactId>
-      <version>1.6.2</version>
-    </dependency>
-
-    <!-- For priority annotations. -->
-    <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
-    </dependency>
 
     <!-- For spring beans to drive configuration loading. -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>5.3.5</version>
+      <version>5.3.6</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>5.3.5</version>
+      <version>5.3.6</version>
     </dependency>
 
     <dependency>
@@ -253,7 +257,6 @@
       <scope>test</scope>
     </dependency>
 
-
   </dependencies>
 
   <build>
@@ -313,8 +316,8 @@
         <version>3.8.1</version>
         <configuration>
           <!-- Compatible down to java 1.8. Tested 1.8, 11, and 15. -->
-          <source>15</source>
-          <target>15</target>
+          <source>1.8</source>
+          <target>1.8</target>
           <!-- <releaase>11</releaase> -->
           <compilerArgument>-Xlint:deprecation</compilerArgument>
         </configuration>
