Added file rolling to log4j configuration.

--- a/scripts/nsi-dds.conf
+++ b/scripts/nsi-dds.conf
@@ -19,6 +19,7 @@ script
 exec su -l -s /bin/bash -c 'exec "$0" "$@"' $USER -- /usr/bin/java \
         -Xmx1024m -Djava.net.preferIPv4Stack=true  \
         -Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true \
+	-Dlog4j.configurationFile=$HOME/config/log4j.xml \
         -Djava.util.logging.config.file="$HOME/config/logging.properties" \
         -Dbasedir="$HOME" \
         -jar "$HOME/dds.jar" \
