--- a/config/application.conf
+++ b/config/application.conf
@@ -12,6 +12,8 @@ akka {
   # Options: OFF, ERROR, WARNING, INFO, DEBUG
   loglevel = "DEBUG"
 
+  log-config-on-start = on
+
   # Log level for the very basic logger activated during ActorSystem startup.
   # This logger prints the log messages to stdout (System.out).
   # Options: OFF, ERROR, WARNING, INFO, DEBUG
@@ -20,6 +22,8 @@ akka {
   # Filter of log events that is used by the LoggingAdapter before
   # publishing log events to the eventStream.
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
+  event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
 
   actor {
     debug {
