--- a/config/logging.properties
+++ b/config/logging.properties
@@ -1,5 +1,5 @@
-org.glassfish.jersey.config.feature.Trace=true
-org.glassfish.grizzly.config.feature.Trace=true
+org.glassfish.jersey.config.feature.Trace=false
+org.glassfish.grizzly.config.feature.Trace=false
 
 org.glassfish.jersey.handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 org.glassfish.grizzly.handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
@@ -7,7 +7,7 @@ org.glassfish.grizzly.handlers=java.util.logging.FileHandler, java.util.logging.
 java.util.logging.FileHandler.pattern=var/log/jersey.log
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 
-.level=ALL
-java.util.logging.ConsoleHandler.level=ALL
+.level=INFO
+java.util.logging.ConsoleHandler.level=INFO
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
-confLogger.level=ALL
+confLogger.level=INFO
