Expanded the docker compose test configuration.

--- a/compose/opennsa-west-config/opennsa.conf
+++ b/compose/opennsa-west-config/opennsa.conf
@@ -1,7 +1,7 @@
 # Sample docker configuration file
 
 [service]
-domain=dockertest.net:2021
+domain=opennsa-west.net:2021
 # log to stdout
 logfile=
 #peers=example.org@http://example.org:9080/NSI/topology/example.org.xml
