--- a/compose/opennsa-west-config/opennsa.env
+++ b/compose/opennsa-west-config/opennsa.env
@@ -1,7 +1,7 @@
 POSTGRES_DB=opennsa
 POSTGRES_USER=opennsa
 POSTGRES_PASSWORD=opennsa
-POSTGRES_HOST=opennsa-db
+POSTGRES_HOST=db-west
 POSTGRES_PORT=5432
 
 TLS_ENABLED=false
