--- a/charts/nsi-dds/values.yaml
+++ b/charts/nsi-dds/values.yaml
@@ -110,19 +110,140 @@ tolerations: []
 
 affinity: {}
 
-# read configuration from filesystem using configFilesGlog or specify inlineData and/or inlineBinaryData
-# note that configFilesGlob takes precedence over inlineData and/or inlineBinaryData
-config:
-  name: "nsi-dds-config"
-  mountPath: "/config"
-  #configFilesGlob: "config/*"
-  inlineData: |-
-    file1.ext: |-
-      file content 1
-    file2.ext: |-
-      file content 2
-
 cache:
-  name: "nsi-dds-cache"
   mountPath: "/cache"
   storage: "1Gi"
+
+config:
+  #
+  # nsi-dds needs the following four configuration files:
+  # - application.properties
+  # - dds.xml
+  # - log4j.xml
+  #
+  # When config.configMapName is defined it must point to an existing configmap, managed outside of Helm,
+  # that contains all necessary configuration files. Otherwise, Helm will create a configmap with files from
+  # a folder pointed to by config.filesGlob, or the combination of config.inlineData and config.inlineBinaryData
+  # is used. Note that filesGlob takes precedence over inline data.
+  #
+  # When config.keystore.secretName is defined it must point to an existing secret, managed outside of Helm,
+  # the file pointed to by config.keystore.key will be mapped to nsi-dds-keystore.jks. In this case the configmap
+  # does not need to contain a keystore. To use a truststore from a secret use config.truststore.
+  #
+  mountPath: "/config"
+  #configMapName: my-configmap-with-config
+  #configFilesGlob: "config/*"
+  inlineData: |-
+    dds.xml: |-
+      <tns:dds xmlns:tns="http://schemas.es.net/nsi/2014/03/dds/configuration" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+          <nsaId>urn:ogf:network:example.domain:2017:nsa:safnari</nsaId>
+          <documents>/cache/documents</documents>
+          <cache>/cache</cache>
+          <repository>/cache/repository</repository>
+          <expiryInterval>600</expiryInterval>
+          <baseURL>https://dds.example.domain/dds</baseURL>
+      
+          <client secure="true"/>
+          <server address="0.0.0.0" port="8401" packageName="net.es.nsi.dds" secure="false"/>
+      
+          <secure production="true">
+            <keyStore type="JKS">
+              <file>/config/key/nsi-dds-keystore.jks</file>
+              <password>secret</password>
+            </keyStore>
+            <trustStore type="JKS">
+              <file>/config/trust/nsi-dds-truststore.jks</file>
+              <password>secret</password>
+            </trustStore>
+          </secure>
+      
+          <accessControl enabled="false">
+            <rule access="read">
+              <dn>EMAILADDRESS=bob@example.com, CN=Bobby Boogie, OU=Sciences Network, O=Example Networks, L=New York, ST=NY, C=US</dn>
+            </rule>
+            <rule access="write">
+              <dn>CN=nsi-aggr-west.es.net, OU=Domain Control Validated</dn>
+            <nsaId>urn:ogf:network:es.net:2013:nsa:nsi-aggr-west</nsaId>
+            </rule>
+          </accessControl>
+      
+          <peerURL type="application/vnd.ogf.nsi.nsa.v1+xml">https://supa.dev.automation.surf.net/discovery</peerURL>
+      </tns:dds>
+    logging.properties: |-
+      org.glassfish.jersey.config.feature.Trace=true
+      org.glassfish.grizzly.config.feature.Trace=true
+      
+      org.glassfish.jersey.handlers=java.util.logging.ConsoleHandler
+      org.glassfish.grizzly.handlers=java.util.logging.ConsoleHandler
+    log4j.xml:
+      <?xml version="1.0" encoding="UTF-8"?>
+      <Configuration status="DEBUG" strict="true" monitorInterval="30"
+        xmlns="http://logging.apache.org/log4j/2.0/config"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://logging.apache.org/log4j/2.0/config
+        https://raw.githubusercontent.com/apache/logging-log4j2/master/log4j-core/src/main/resources/Log4j-config.xsd">
+      
+        <Appenders>
+          <Console name="LogToConsole" target="SYSTEM_OUT">
+            <PatternLayout>
+              <Pattern>%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n</Pattern>
+            </PatternLayout>
+          </Console>
+        </Appenders>
+      
+        <Loggers>
+          <Logger name="org.springframework" level="debug" additivity="false">
+            <AppenderRef ref="LogToConsole"/>
+          </Logger>
+          <Logger name="org.eclipse" level="debug" additivity="false">
+            <AppenderRef ref="LogToConsole"/>
+          </Logger>
+          <Logger name="org.apache" level="debug" additivity="false">
+            <AppenderRef ref="LogToConsole"/>
+          </Logger>
+          <Logger name="org.glassfish.jersey" level="debug" additivity="false">
+            <AppenderRef ref="LogToConsole"/>
+          </Logger>
+          <Logger name="org.glassfish.grizzly" level="debug" additivity="false">
+            <AppenderRef ref="LogToConsole"/>
+          </Logger>
+          <Logger name="org.hibernate" level="debug" additivity="false">
+            <AppenderRef ref="LogToConsole"/>
+          </Logger>
+          <Logger name="net.es.nsi.dds" level="debug" additivity="false">
+            <AppenderRef ref="LogToConsole"/>
+          </Logger>
+          <Root level="debug">
+            <AppenderRef ref="LogToConsole"/>
+          </Root>
+        </Loggers>
+      </Configuration>
+
+  # When using inline key and trust stores, please replace the Lorem Ipsum below with actual stores.
+  inlineBinaryData: |-
+    nsi-dds-keystore.jks: |-
+      TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwgc2Vk
+      IGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWduYSBhbGlx
+      dWEuIFV0IGVuaW0gYWQgbWluaW0gdmVuaWFtLCBxdWlzIG5vc3RydWQgZXhlcmNpdGF0aW9uIHVsbGFt
+      Y28gbGFib3JpcyBuaXNpIHV0IGFsaXF1aXAgZXggZWEgY29tbW9kbyBjb25zZXF1YXQuIER1aXMgYXV0
+      ZSBpcnVyZSBkb2xvciBpbiByZXByZWhlbmRlcml0IGluIHZvbHVwdGF0ZSB2ZWxpdCBlc3NlIGNpbGx1
+      bSBkb2xvcmUgZXUgZnVnaWF0IG51bGxhIHBhcmlhdHVyLiBFeGNlcHRldXIgc2ludCBvY2NhZWNhdCBj
+      dXBpZGF0YXQgbm9uIHByb2lkZW50LCBzdW50IGluIGN1bHBhIHF1aSBvZmZpY2lhIGRlc2VydW50IG1v
+      bGxpdCBhbmltIGlkIGVzdCBsYWJvcnVtLgo=
+    nsi-dds-truststore.jks: |-
+      TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwgc2Vk
+      IGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWduYSBhbGlx
+      dWEuIFV0IGVuaW0gYWQgbWluaW0gdmVuaWFtLCBxdWlzIG5vc3RydWQgZXhlcmNpdGF0aW9uIHVsbGFt
+      Y28gbGFib3JpcyBuaXNpIHV0IGFsaXF1aXAgZXggZWEgY29tbW9kbyBjb25zZXF1YXQuIER1aXMgYXV0
+      ZSBpcnVyZSBkb2xvciBpbiByZXByZWhlbmRlcml0IGluIHZvbHVwdGF0ZSB2ZWxpdCBlc3NlIGNpbGx1
+      bSBkb2xvcmUgZXUgZnVnaWF0IG51bGxhIHBhcmlhdHVyLiBFeGNlcHRldXIgc2ludCBvY2NhZWNhdCBj
+      dXBpZGF0YXQgbm9uIHByb2lkZW50LCBzdW50IGluIGN1bHBhIHF1aSBvZmZpY2lhIGRlc2VydW50IG1v
+      bGxpdCBhbmltIGlkIGVzdCBsYWJvcnVtLgo=
+  # Use keystore and truststore below to override the nsi-dds-keystore.jks and/or nsi-dds-truststore.jks
+  # from the configmap above. For example to use a keystore generated by certmanager.
+  keystore:
+    secretName: my-nsi-dds-keystore
+    #key: keystore.jks
+  truststore:
+    #secretName: my-nsi-dds-truststore
+    #key: truststore.jks
