--- a/charts/nsi-dds/templates/statefulset.yaml
+++ b/charts/nsi-dds/templates/statefulset.yaml
@@ -27,6 +27,33 @@ spec:
       serviceAccountName: {{ include "nsi-dds.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- if .Values.config.caSecretName }}
+      initContainers:
+        - name: ca-to-truststore
+          securityContext:
+            runAsUser: 0
+          image: debian:trixie-slim
+          command:
+            - sh
+            - -c
+            - |
+              cd /truststore
+              cp /ca/ca.crt .
+              apt-get update
+              apt-get install -y --no-install-recommends openjdk-21-jdk-headless
+              awk '/-----BEGIN CERTIFICATE-----/ {out="cert" ++i ".pem"}; out {print >> out} /-----END CERTIFICATE-----/ {out=""}' ca.crt
+              for cert in cert*.pem; do
+                  cn=$(openssl x509 -in ${cert} -noout -subject | sed -n 's/^subject=//p')
+                  echo "${cn}"
+                  keytool -trustcacerts -storepass secret -importcert -alias "${cn}" -file ${cert} -keystore nsi-dds-truststore.jks -noprompt
+              done
+              rm cert*.pem
+          volumeMounts:
+            - name: truststore
+              mountPath: /truststore
+            - name: ca
+              mountPath: /ca
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -57,6 +84,10 @@ spec:
             - name: truststore
               mountPath: "{{ .Values.config.mountPath }}/trust"
               readOnly: true
+          {{- end }}
+          {{- if .Values.config.caSecretName }}
+            - name: truststore
+              mountPath: /truststore
           {{- end }}
           ports:
             - name: internal
@@ -108,7 +139,7 @@ spec:
             - key: "nsi-dds-keystore.jks"
               path: "key/nsi-dds-keystore.jks"
             {{- end }}
-            {{- if (((.Values.config).truststore).secretName) }}
+            {{- if or (((.Values.config).truststore).secretName) ((.Values.config).caSecretName) }}
             {{- else }}
             - key: "nsi-dds-truststore.jks"
               path: "trust/nsi-dds-truststore.jks"
@@ -128,6 +159,13 @@ spec:
             items:
             - key: {{ .Values.config.truststore.key }}
               path: nsi-dds-truststore.jks
+        {{- end }}
+        {{- if .Values.config.caSecretName }}
+        - name: ca
+          secret:
+            secretName: {{ .Values.config.caSecretName }}
+        - name: truststore
+          emptyDir: {}
         {{- end }}
         - name: cache
           persistentVolumeClaim:
